--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <script>
     // 👉 ЗДЕСЬ укажешь свой backend
-    const API_BASE = "https://YOUR-BACKEND.onrailway.app/api/products";
+    const API_BASE = "https://shibakovk.app.n8n.cloud/webhook-test/product_list";
 
     // Инициализация Telegram WebApp (если открыто в Телеге)
     const tg = window.Telegram ? window.Telegram.WebApp : null;
