--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --bg-main: #f2f2f7;
       --bg-card: #ffffff;
       --border-subtle: #e5e5ea;
-      --accent: #ff3b30; /* Apple Health vibe, можно заменить на #007aff */
+      --accent: #ff3b30; /* Apple Health vibe */
       --accent-soft: rgba(255, 59, 48, 0.14);
       --text-main: #111111;
       --text-secondary: #8e8e93;
@@ -133,6 +133,10 @@
       margin-bottom: 6px;
     }
 
+    .field {
+      margin-top: 4px;
+    }
+
     /* === SEARCH FIELD === */
     .search-wrapper {
       position: relative;
@@ -156,10 +160,14 @@
     .results {
       margin-top: 6px;
       border-radius: 12px;
-      background: #f9f9fb;
+      background: #ffffff;
       border: 1px solid var(--border-subtle);
-      max-height: 220px;
+      max-height: 240px;
       overflow-y: auto;
+      min-height: 20px;      /* важно для WebApp, чтобы блок рендерился */
+      position: relative;
+      z-index: 10;
+      visibility: hidden;    /* по умолчанию скрыто */
     }
 
     .results-empty {
@@ -239,12 +247,19 @@
       justify-content: flex-end;
     }
 
-    .selected-controls input[type="number"] {
-      width: 90px;
-      padding: 6px 8px;
-      font-size: 14px;
-      border-radius: 10px;
+    .gram-picker-trigger {
+      padding: 8px 12px;
       background: #ffffff;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+      min-width: 80px;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    .gram-picker-trigger-empty {
+      color: var(--text-muted);
     }
 
     .remove-pill {
@@ -299,7 +314,7 @@
       opacity: 0.9;
     }
 
-    /* === DARK THEME (через Telegram colorScheme) === */
+    /* === DARK THEME === */
     body.dark {
       --bg-main: #000000;
       --bg-card: #1c1c1e;
@@ -308,6 +323,20 @@
       --text-secondary: #8e8e93;
       --text-muted: #6b6b70;
       --shadow-soft: 0 10px 30px rgba(0,0,0,0.7);
+    }
+
+    body.dark .results {
+      background: #1c1c1e;
+      border-color: #3a3a3c;
+    }
+
+    body.dark .selected-item {
+      background: #2c2c2e;
+      border-color: #3a3a3c;
+    }
+
+    body.dark .bottom-bar {
+      background: linear-gradient(to top, rgba(0,0,0,0.98), rgba(0,0,0,0.85), transparent);
     }
   </style>
 </head>
@@ -360,7 +389,7 @@
         </div>
       </div>
 
-      <div id="results" class="results" style="display:none;"></div>
+      <div id="results" class="results"></div>
     </section>
 
     <!-- Выбранные продукты -->
@@ -386,6 +415,108 @@
     <button class="button" id="saveButton">Сохранить приём</button>
   </div>
 
+  <!-- Успешное сохранение -->
+  <div id="successScreen" style="
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.35);
+    backdrop-filter: blur(12px);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+  ">
+    <div style="
+      background: #fff;
+      border-radius: 22px;
+      padding: 22px;
+      width: 86%;
+      max-width: 380px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+      text-align: center;
+      font-family: -apple-system;
+    ">
+      <div style="font-size: 44px; margin-bottom: 10px;">✅</div>
+      <div style="font-size: 20px; font-weight: 600; margin-bottom: 14px;">
+        Приём пищи сохранён
+      </div>
+
+      <div id="successTable" style="
+        font-size: 14px;
+        line-height: 1.45;
+        color: #555;
+        text-align: left;
+        background: #f9f9fb;
+        padding: 12px;
+        border-radius: 12px;
+        border: 1px solid #eee;
+        margin-bottom: 20px;
+        max-height: 220px;
+        overflow-y: auto;
+      "></div>
+
+      <button onclick="closeSuccess()" style="
+        width: 100%;
+        padding: 12px;
+        font-size: 16px;
+        background: #007aff;
+        color: #fff;
+        border-radius: 12px;
+        border: none;
+        cursor: pointer;
+      ">Закрыть</button>
+    </div>
+  </div>
+
+  <!-- Picker граммовки -->
+  <div id="pickerOverlay" style="
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.35);
+    backdrop-filter: blur(12px);
+    display: none;
+    align-items: flex-end;
+    justify-content: center;
+    z-index: 99999;
+  ">
+    <div style="
+      width: 100%;
+      background: #fff;
+      border-radius: 20px 20px 0 0;
+      padding-top: 10px;
+      padding-bottom: calc(12px + env(safe-area-inset-bottom, 0));
+      box-shadow: 0 -4px 20px rgba(0,0,0,0.22);
+    ">
+      <div style="text-align: center; font-size: 16px; font-weight: 600; padding-bottom: 6px;">
+        Укажи граммовку
+      </div>
+
+      <div id="pickerWheel" style="
+        height: 180px;
+        overflow-y: auto;
+        scroll-snap-type: y mandatory;
+        -webkit-overflow-scrolling: touch;
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        position: relative;
+      ">
+        <!-- значения добавятся из JS -->
+      </div>
+
+      <button onclick="closePicker()" style="
+        width: 90%;
+        margin: 10px auto 0;
+        display: block;
+        padding: 12px;
+        background: #007aff;
+        color: #fff;
+        font-size: 16px;
+        border-radius: 12px;
+        border: none;
+      ">Готово</button>
+    </div>
+  </div>
+
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
   <script>
@@ -408,6 +539,7 @@
 
     let debounce = null;
     let selectedItems = []; // {id, product, quantity}
+    let currentPickerItem = null;
 
     // === Поиск продуктов ===
     searchInput.addEventListener("input", () => {
@@ -416,7 +548,7 @@
       if (debounce) clearTimeout(debounce);
 
       if (!query) {
-        resultsDiv.style.display = "none";
+        resultsDiv.style.visibility = "hidden";
         resultsDiv.innerHTML = "";
         return;
       }
@@ -434,20 +566,21 @@
         const products = data.products || (data[0] && data[0].products) || [];
         renderSearchResults(products);
       } catch (e) {
-        resultsDiv.style.display = "block";
+        resultsDiv.style.visibility = "visible";
         resultsDiv.innerHTML = '<div class="results-empty">Ошибка поиска, попробуй ещё раз</div>';
+        resultsDiv.offsetHeight; // force reflow
       }
     }
 
     function renderSearchResults(products) {
       if (!products.length) {
-        resultsDiv.style.display = "block";
+        resultsDiv.style.visibility = "visible";
         resultsDiv.innerHTML = '<div class="results-empty">Нет совпадений</div>';
+        resultsDiv.offsetHeight; // force reflow для WebApp
         return;
       }
 
-      resultsDiv.style.display = "block";
-      resultsDiv.innerHTML = products
+      const html = products
         .map(p => `
           <div class="product" onclick="selectProduct('${p.product.replace(/'/g, "\\'")}')">
             <div class="product-name">${p.product}</div>
@@ -455,6 +588,10 @@
           </div>
         `)
         .join("");
+
+      resultsDiv.style.visibility = "visible";
+      resultsDiv.innerHTML = html;
+      resultsDiv.offsetHeight; // force reflow
     }
 
     // === Добавление продукта ===
@@ -468,7 +605,7 @@
       });
 
       renderSelectedList();
-      resultsDiv.style.display = "none";
+      resultsDiv.style.visibility = "hidden";
       resultsDiv.innerHTML = "";
       searchInput.value = "";
     };
@@ -490,11 +627,10 @@
             <div class="selected-row">
               <div class="selected-name">${item.product}</div>
               <div class="selected-controls">
-                <input type="number"
-                  placeholder="граммы"
-                  value="${item.quantity || ''}"
-                  oninput="updateQuantity(${item.id}, this.value)"
-                >
+                <div class="gram-picker-trigger ${item.quantity ? "" : "gram-picker-trigger-empty"}"
+                  onclick="openPicker(${item.id})">
+                  ${item.quantity ? (item.quantity + " г") : "граммы"}
+                </div>
                 <button class="remove-pill" onclick="removeItem(${item.id})">Убрать</button>
               </div>
             </div>
@@ -505,16 +641,6 @@
 
       updateCounter();
     }
-
-    window.updateQuantity = function(id, value) {
-      const item = selectedItems.find(i => i.id === id);
-      if (item) item.quantity = Number(value) || 0;
-    };
-
-    window.removeItem = function(id) {
-      selectedItems = selectedItems.filter(i => i.id !== id);
-      renderSelectedList();
-    };
 
     function updateCounter() {
       const count = selectedItems.length;
@@ -531,8 +657,74 @@
       }
     }
 
+    window.removeItem = function(id) {
+      selectedItems = selectedItems.filter(i => i.id !== id);
+      renderSelectedList();
+    };
+
+    // === Picker граммовки ===
+    function openPicker(itemId) {
+      currentPickerItem = selectedItems.find(i => i.id === itemId);
+      if (!currentPickerItem) return;
+
+      const wheel = document.getElementById("pickerWheel");
+      wheel.innerHTML = "";
+
+      for (let v = 10; v <= 500; v += 10) {
+        const div = document.createElement("div");
+        div.textContent = v + " г";
+        div.style.padding = "12px";
+        div.style.fontSize = "20px";
+        div.style.textAlign = "center";
+        div.style.scrollSnapAlign = "center";
+        div.style.cursor = "pointer";
+        div.style.color = (currentPickerItem.quantity === v ? "#007aff" : "#111");
+
+        div.onclick = () => {
+          currentPickerItem.quantity = v;
+          renderSelectedList();
+          // обновим подсветку
+          Array.from(wheel.children).forEach(child => {
+            child.style.color = "#111";
+          });
+          div.style.color = "#007aff";
+        };
+
+        wheel.appendChild(div);
+      }
+
+      const index = currentPickerItem.quantity
+        ? (currentPickerItem.quantity / 10) - 1
+        : 0;
+      const rowHeight = 44; // примерно высота строки
+      wheel.scrollTop = index * rowHeight;
+
+      document.getElementById("pickerOverlay").style.display = "flex";
+    }
+
+    function closePicker() {
+      document.getElementById("pickerOverlay").style.display = "none";
+    }
+
     // === Сохранение в БД ===
     document.getElementById("saveButton").addEventListener("click", async () => {
+      if (!selectedItems.length) {
+        if (tg) tg.showAlert("Добавь хотя бы один продукт");
+        else alert("Добавь хотя бы один продукт");
+        return;
+      }
+
+      const invalidItem = selectedItems.find(i => !i.quantity || i.quantity <= 0);
+
+      if (invalidItem) {
+        if (tg) {
+          tg.showAlert(`У продукта «${invalidItem.product}» не указана граммовка`);
+        } else {
+          alert(`У продукта «${invalidItem.product}» не указана граммовка`);
+        }
+        return;
+      }
+
       const mealType = document.getElementById("mealType").value;
 
       const logInfoString = selectedItems
@@ -541,7 +733,7 @@
 
       const payload = {
         meal_type: mealType,
-        request_type: "ready to insert",
+        request_type: "ready_to_insert",
         log_info: logInfoString
       };
 
@@ -552,12 +744,32 @@
           body: JSON.stringify(payload)
         });
 
-        if (tg) tg.close();
-        else alert("Сохранено!");
+        showSuccessScreen();
       } catch (e) {
-        alert("Ошибка при сохранении");
+        if (tg) tg.showAlert("Ошибка при сохранении");
+        else alert("Ошибка при сохранении");
       }
     });
+
+    function showSuccessScreen() {
+      const table = selectedItems.length
+        ? selectedItems
+            .map(i => `<div>${i.product} — <strong>${i.quantity} г</strong></div>`)
+            .join("")
+        : "<div>Без продуктов (пустой приём)</div>";
+
+      document.getElementById("successTable").innerHTML = table;
+      document.getElementById("successScreen").style.display = "flex";
+
+      // очищаем список для следующего приёма
+      selectedItems = [];
+      renderSelectedList();
+    }
+
+    function closeSuccess() {
+      if (tg) tg.close();
+      else document.getElementById("successScreen").style.display = "none";
+    }
   </script>
 </body>
 </html>
