--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 
       const payload = {
         meal_type: mealType,
-        request_type: "ready_to_insert",
+        request_type: "ready to insert",
         log_info: logInfoString
       };
 
