--- a/index.html
+++ b/index.html
@@ -5,340 +5,7 @@
   <title>Лог еды</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    :root {
-      --bg-main: #f2f2f7;
-      --bg-card: #ffffff;
-      --border-subtle: #e5e5ea;
-      --accent: #ff3b30; /* Apple Health vibe */
-      --accent-soft: rgba(255, 59, 48, 0.14);
-      --text-main: #111111;
-      --text-secondary: #8e8e93;
-      --text-muted: #b0b0b4;
-      --shadow-soft: 0 8px 20px rgba(0,0,0,0.06);
-      --radius-card: 18px;
-      --radius-pill: 999px;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
-      margin: 0;
-      padding: 0;
-      background: var(--bg-main);
-      color: var(--text-main);
-      -webkit-font-smoothing: antialiased;
-    }
-
-    .page {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      padding: 0 16px 96px; /* запас под кнопку снизу */
-      box-sizing: border-box;
-    }
-
-    /* === HEADER === */
-    .header {
-      padding-top: 20px;
-      padding-bottom: 12px;
-    }
-
-    .header-label {
-      font-size: 12px;
-      text-transform: uppercase;
-      letter-spacing: 0.8px;
-      color: var(--accent);
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-
-    .header-title {
-      font-size: 28px;
-      font-weight: 700;
-      letter-spacing: -0.3px;
-      margin-bottom: 4px;
-    }
-
-    .header-subtitle {
-      font-size: 14px;
-      color: var(--text-secondary);
-      max-width: 320px;
-    }
-
-    /* === CARDS === */
-    .card {
-      background: var(--bg-card);
-      border-radius: var(--radius-card);
-      box-shadow: var(--shadow-soft);
-      padding: 14px 14px 12px;
-      margin-bottom: 14px;
-      border: 1px solid rgba(255, 255, 255, 0.7);
-    }
-
-    .card-header {
-      display: flex;
-      align-items: baseline;
-      justify-content: space-between;
-      margin-bottom: 8px;
-    }
-
-    .card-title {
-      font-size: 15px;
-      font-weight: 600;
-    }
-
-    .card-caption {
-      font-size: 12px;
-      color: var(--text-secondary);
-      margin-top: 2px;
-    }
-
-    .card-counter {
-      font-size: 12px;
-      padding: 3px 10px;
-      border-radius: var(--radius-pill);
-      background: var(--accent-soft);
-      color: var(--accent);
-      font-weight: 500;
-      white-space: nowrap;
-    }
-
-    /* === FIELDS === */
-    select,
-    input[type="text"],
-    input[type="number"] {
-      width: 100%;
-      box-sizing: border-box;
-      padding: 10px 12px;
-      font-size: 15px;
-      border-radius: 12px;
-      border: 1px solid var(--border-subtle);
-      background: #f9f9fb;
-      outline: none;
-      -webkit-appearance: none;
-      appearance: none;
-    }
-
-    select:focus,
-    input[type="text"]:focus,
-    input[type="number"]:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 0 2px rgba(255,59,48,0.15);
-      background: #ffffff;
-    }
-
-    .field-label {
-      font-size: 13px;
-      color: var(--text-secondary);
-      margin-bottom: 6px;
-    }
-
-    .field {
-      margin-top: 4px;
-    }
-
-    /* === SEARCH FIELD === */
-    .search-wrapper {
-      position: relative;
-    }
-
-    .search-wrapper input[type="text"] {
-      padding-left: 32px;
-    }
-
-    .search-icon {
-      position: absolute;
-      left: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 16px;
-      color: var(--text-muted);
-      pointer-events: none;
-    }
-
-    /* === SEARCH RESULTS === */
-    .results {
-      margin-top: 6px;
-      border-radius: 12px;
-      background: #ffffff;
-      border: 1px solid var(--border-subtle);
-      max-height: 240px;
-      overflow-y: auto;
-      min-height: 20px;      /* важно для WebApp, чтобы блок рендерился */
-      position: relative;
-      z-index: 10;
-      visibility: hidden;    /* по умолчанию скрыто */
-    }
-
-    .results-empty {
-      padding: 8px 10px;
-      font-size: 13px;
-      color: var(--text-muted);
-    }
-
-    .product {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 12px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background 0.15s ease, transform 0.05s ease;
-    }
-
-    .product + .product {
-      border-top: 1px solid rgba(0,0,0,0.04);
-    }
-
-    .product:active {
-      background: rgba(0,0,0,0.04);
-      transform: scale(0.99);
-    }
-
-    .product-name {
-      flex: 1;
-      padding-right: 8px;
-    }
-
-    .product-add {
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: var(--radius-pill);
-      border: 1px solid var(--accent);
-      color: var(--accent);
-      font-weight: 500;
-    }
-
-    /* === SELECTED PRODUCTS === */
-    .selected-list-empty {
-      font-size: 13px;
-      color: var(--text-muted);
-      padding: 4px 2px 2px;
-    }
-
-    .selected-item {
-      background: #f9f9fb;
-      border-radius: 12px;
-      padding: 8px 10px;
-      margin-bottom: 8px;
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-      border: 1px solid rgba(0,0,0,0.03);
-    }
-
-    .selected-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 8px;
-    }
-
-    .selected-name {
-      font-size: 14px;
-      font-weight: 500;
-    }
-
-    .selected-controls {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      min-width: 130px;
-      justify-content: flex-end;
-    }
-
-    .gram-picker-trigger {
-      padding: 8px 12px;
-      background: #ffffff;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-      min-width: 80px;
-      text-align: center;
-      cursor: pointer;
-    }
-
-    .gram-picker-trigger-empty {
-      color: var(--text-muted);
-    }
-
-    .remove-pill {
-      font-size: 12px;
-      padding: 4px 8px;
-      border-radius: var(--radius-pill);
-      border: none;
-      background: rgba(0,0,0,0.06);
-      color: #555;
-      cursor: pointer;
-    }
-
-    .remove-pill:active {
-      background: rgba(0,0,0,0.09);
-    }
-
-    .small-hint {
-      font-size: 11px;
-      color: var(--text-muted);
-    }
-
-    /* === BOTTOM SAVE BUTTON === */
-    .bottom-bar {
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      padding: 10px 16px calc(10px + env(safe-area-inset-bottom, 0));
-      background: linear-gradient(to top, rgba(242,242,247,0.98), rgba(242,242,247,0.85), transparent);
-      box-sizing: border-box;
-      backdrop-filter: blur(18px);
-    }
-
-    .button {
-      width: 100%;
-      background: var(--accent);
-      padding: 14px;
-      border-radius: 14px;
-      text-align: center;
-      color: #fff;
-      font-size: 17px;
-      font-weight: 600;
-      cursor: pointer;
-      border: none;
-      box-shadow: 0 8px 16px rgba(255,59,48,0.35);
-      transition: transform 0.06s ease, box-shadow 0.1s ease, opacity 0.15s ease;
-    }
-
-    .button:active {
-      transform: scale(0.98);
-      box-shadow: 0 4px 10px rgba(255,59,48,0.25);
-      opacity: 0.9;
-    }
-
-    /* === DARK THEME === */
-    body.dark {
-      --bg-main: #000000;
-      --bg-card: #1c1c1e;
-      --border-subtle: #3a3a3c;
-      --text-main: #f5f5f7;
-      --text-secondary: #8e8e93;
-      --text-muted: #6b6b70;
-      --shadow-soft: 0 10px 30px rgba(0,0,0,0.7);
-    }
-
-    body.dark .results {
-      background: #1c1c1e;
-      border-color: #3a3a3c;
-    }
-
-    body.dark .selected-item {
-      background: #2c2c2e;
-      border-color: #3a3a3c;
-    }
-
-    body.dark .bottom-bar {
-      background: linear-gradient(to top, rgba(0,0,0,0.98), rgba(0,0,0,0.85), transparent);
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -518,258 +185,6 @@
   </div>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-  <script>
-    const API_SEARCH = "https://shibakovk.app.n8n.cloud/webhook/product_list";
-    const API_LOG    = "https://shibakovk.app.n8n.cloud/webhook/food_log";
-
-    const tg = window.Telegram && window.Telegram.WebApp;
-
-    if (tg) {
-      tg.ready();
-      if (tg.colorScheme === "dark") {
-        document.body.classList.add("dark");
-      }
-    }
-
-    const searchInput   = document.getElementById("searchInput");
-    const resultsDiv    = document.getElementById("results");
-    const selectedList  = document.getElementById("selectedList");
-    const counterSpan   = document.getElementById("selectedCounter");
-
-    let debounce = null;
-    let selectedItems = []; // {id, product, quantity}
-    let currentPickerItem = null;
-
-    // === Поиск продуктов ===
-    searchInput.addEventListener("input", () => {
-      const query = searchInput.value.trim();
-
-      if (debounce) clearTimeout(debounce);
-
-      if (!query) {
-        resultsDiv.style.visibility = "hidden";
-        resultsDiv.innerHTML = "";
-        return;
-      }
-
-      debounce = setTimeout(() => {
-        fetchProducts(query);
-      }, 200);
-    });
-
-    async function fetchProducts(query) {
-      try {
-        const res = await fetch(API_SEARCH + "?query=" + encodeURIComponent(query));
-        const data = await res.json();
-
-        const products = data.products || (data[0] && data[0].products) || [];
-        renderSearchResults(products);
-      } catch (e) {
-        resultsDiv.style.visibility = "visible";
-        resultsDiv.innerHTML = '<div class="results-empty">Ошибка поиска, попробуй ещё раз</div>';
-        resultsDiv.offsetHeight; // force reflow
-      }
-    }
-
-    function renderSearchResults(products) {
-      if (!products.length) {
-        resultsDiv.style.visibility = "visible";
-        resultsDiv.innerHTML = '<div class="results-empty">Нет совпадений</div>';
-        resultsDiv.offsetHeight; // force reflow для WebApp
-        return;
-      }
-
-      const html = products
-        .map(p => `
-          <div class="product" onclick="selectProduct('${p.product.replace(/'/g, "\\'")}')">
-            <div class="product-name">${p.product}</div>
-            <div class="product-add">Добавить</div>
-          </div>
-        `)
-        .join("");
-
-      resultsDiv.style.visibility = "visible";
-      resultsDiv.innerHTML = html;
-      resultsDiv.offsetHeight; // force reflow
-    }
-
-    // === Добавление продукта ===
-    window.selectProduct = function(productName) {
-      const itemId = Date.now() + Math.random();
-
-      selectedItems.push({
-        id: itemId,
-        product: productName,
-        quantity: 0
-      });
-
-      renderSelectedList();
-      resultsDiv.style.visibility = "hidden";
-      resultsDiv.innerHTML = "";
-      searchInput.value = "";
-    };
-
-    function renderSelectedList() {
-      if (!selectedItems.length) {
-        selectedList.innerHTML = `
-          <div class="selected-list-empty">
-            Пока ничего не выбрано. Найди продукт выше и добавь его в этот приём.
-          </div>
-        `;
-        updateCounter();
-        return;
-      }
-
-      selectedList.innerHTML = selectedItems
-        .map(item => `
-          <div class="selected-item">
-            <div class="selected-row">
-              <div class="selected-name">${item.product}</div>
-              <div class="selected-controls">
-                <div class="gram-picker-trigger ${item.quantity ? "" : "gram-picker-trigger-empty"}"
-                  onclick="openPicker(${item.id})">
-                  ${item.quantity ? (item.quantity + " г") : "граммы"}
-                </div>
-                <button class="remove-pill" onclick="removeItem(${item.id})">Убрать</button>
-              </div>
-            </div>
-            <div class="small-hint">Укажи вес продукта в граммах</div>
-          </div>
-        `)
-        .join("");
-
-      updateCounter();
-    }
-
-    function updateCounter() {
-      const count = selectedItems.length;
-      if (!counterSpan) return;
-
-      if (count === 0) {
-        counterSpan.textContent = "0 продуктов";
-      } else if (count === 1) {
-        counterSpan.textContent = "1 продукт";
-      } else if (count >= 2 && count <= 4) {
-        counterSpan.textContent = count + " продукта";
-      } else {
-        counterSpan.textContent = count + " продуктов";
-      }
-    }
-
-    window.removeItem = function(id) {
-      selectedItems = selectedItems.filter(i => i.id !== id);
-      renderSelectedList();
-    };
-
-    // === Picker граммовки ===
-    function openPicker(itemId) {
-      currentPickerItem = selectedItems.find(i => i.id === itemId);
-      if (!currentPickerItem) return;
-
-      const wheel = document.getElementById("pickerWheel");
-      wheel.innerHTML = "";
-
-      for (let v = 10; v <= 500; v += 10) {
-        const div = document.createElement("div");
-        div.textContent = v + " г";
-        div.style.padding = "12px";
-        div.style.fontSize = "20px";
-        div.style.textAlign = "center";
-        div.style.scrollSnapAlign = "center";
-        div.style.cursor = "pointer";
-        div.style.color = (currentPickerItem.quantity === v ? "#007aff" : "#111");
-
-        div.onclick = () => {
-          currentPickerItem.quantity = v;
-          renderSelectedList();
-          // обновим подсветку
-          Array.from(wheel.children).forEach(child => {
-            child.style.color = "#111";
-          });
-          div.style.color = "#007aff";
-        };
-
-        wheel.appendChild(div);
-      }
-
-      const index = currentPickerItem.quantity
-        ? (currentPickerItem.quantity / 10) - 1
-        : 0;
-      const rowHeight = 44; // примерно высота строки
-      wheel.scrollTop = index * rowHeight;
-
-      document.getElementById("pickerOverlay").style.display = "flex";
-    }
-
-    function closePicker() {
-      document.getElementById("pickerOverlay").style.display = "none";
-    }
-
-    // === Сохранение в БД ===
-    document.getElementById("saveButton").addEventListener("click", async () => {
-      if (!selectedItems.length) {
-        if (tg) tg.showAlert("Добавь хотя бы один продукт");
-        else alert("Добавь хотя бы один продукт");
-        return;
-      }
-
-      const invalidItem = selectedItems.find(i => !i.quantity || i.quantity <= 0);
-
-      if (invalidItem) {
-        if (tg) {
-          tg.showAlert(`У продукта «${invalidItem.product}» не указана граммовка`);
-        } else {
-          alert(`У продукта «${invalidItem.product}» не указана граммовка`);
-        }
-        return;
-      }
-
-      const mealType = document.getElementById("mealType").value;
-
-      const logInfoString = selectedItems
-        .map(i => JSON.stringify({ product: i.product, quantity: i.quantity }))
-        .join("\n");
-
-      const payload = {
-        meal_type: mealType,
-        request_type: "ready to insert",
-        log_info: logInfoString
-      };
-
-      try {
-        await fetch(API_LOG, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
-        });
-
-        showSuccessScreen();
-      } catch (e) {
-        if (tg) tg.showAlert("Ошибка при сохранении");
-        else alert("Ошибка при сохранении");
-      }
-    });
-
-    function showSuccessScreen() {
-      const table = selectedItems.length
-        ? selectedItems
-            .map(i => `<div>${i.product} — <strong>${i.quantity} г</strong></div>`)
-            .join("")
-        : "<div>Без продуктов (пустой приём)</div>";
-
-      document.getElementById("successTable").innerHTML = table;
-      document.getElementById("successScreen").style.display = "flex";
-
-      // очищаем список для следующего приёма
-      selectedItems = [];
-      renderSelectedList();
-    }
-
-    function closeSuccess() {
-      if (tg) tg.close();
-      else document.getElementById("successScreen").style.display = "none";
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
